Update fix fox bug 837486 ,changeset fbfca671509c. Don't reset overflow in _unlockTabSizing when multibar is on

--- a/addon/chrome/content/overlay/browsr.css
+++ b/addon/chrome/content/overlay/browsr.css
@@ -113,7 +113,7 @@ label.text-link, label[onclick] {
 
 .tabbrowser-tabs:not([defaultScrollButtons]) > .tabbrowser-arrowscrollbox:not([_side]) > .scrollbutton-up,
 .tabbrowser-tabs:not([defaultScrollButtons]) > .tabbrowser-arrowscrollbox:not([_side]) > .scrollbutton-down {
-  visibility: collapse;
+  visibility: collapse !important;
 }
 
 #TabsToolbar:not([tabstripoverflow]) > #tabmixScrollBox,
